--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
         <tk.mapper.version>4.0.2</tk.mapper.version>
         <poi.version>3.17</poi.version>
         <xstream.version>1.4.10</xstream.version>
+
+        <!-- 插件版本号 -->
+        <version-maven-compile-plugin>3.8.1</version-maven-compile-plugin>
+        <version-maven-resources-plugin>3.1.0</version-maven-resources-plugin>
     </properties>
 
     <dependencies>
@@ -142,6 +146,21 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${version-maven-compile-plugin}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>${version-maven-resources-plugin}</version>
             </plugin>
         </plugins>
     </build>
