--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,10 +29,10 @@ server:
 
 info:
   app:
-    name: "@project.name@"
-    profile: "@activeProfile@"
-    version: "@project.version@"
-    description: "@project.description@"
+    name: '@project.name@'
+    profile: '@activeProfile@'
+    version: '@project.version@'
+    description: '@project.description@'
 
 management:
   endpoints:
