--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>pre</name>
-    <description>Pre project for Spring Boot</description>
+    <name>PRE</name>
+    <description>Pre Project Use Spring Boot</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -95,11 +95,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
         </dependency>
 
         <dependency>
