--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>PRE</name>
-    <description>Pre Project Use Spring Boot</description>
+    <description>THIS IS A PRE-DEVELOPMENT PROJECT</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
