--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>PRE</name>
-    <description>THIS IS A PRE-DEVELOPMENT PROJECT</description>
+    <description>A PRE-DEVELOPMENT PROJECT</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -26,7 +26,7 @@
         <pagehelper.version>1.3.0</pagehelper.version>
         <tk.mapper.version>4.1.5</tk.mapper.version>
         <poi.version>4.1.2</poi.version>
-        <xstream.version>1.4.14</xstream.version>
+        <xstream.version>1.4.15</xstream.version>
 
         <!-- 插件版本号 -->
         <version-maven-compile-plugin>3.8.1</version-maven-compile-plugin>
