修改SpringBoot版本以及相关内容

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -47,7 +47,8 @@ spring:
 
 #日志
 logging:
-  file:
-    max-history: 7
   level:
     root: DEBUG
+  logback:
+    rollingpolicy:
+      max-history: 7
