--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.3.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.4.1</version>
+        <relativePath/>
     </parent>
 
     <properties>
