--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,13 @@ local.properties
 
 
 ##JAVA##########################################################
+# Compiled class file
 *.class
+
+# Log file
+*.log
+# BlueJ files
+*.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -55,11 +61,15 @@ local.properties
 # Package Files #
 *.jar
 *.war
+*.nar
 *.ear
+*.zip
+*.tar.gz
+*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
+replay_pid*
 
 ##MAVEN################################################################
 target/
