--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <tk.mapper.version>4.1.5</tk.mapper.version>
         <poi.version>4.1.2</poi.version>
         <xstream.version>1.4.15</xstream.version>
+        <opencsv.version>5.11</opencsv.version>
 
         <!-- 插件版本号 -->
         <version-maven-compile-plugin>3.8.1</version-maven-compile-plugin>
@@ -125,6 +126,18 @@
             <artifactId>xstream</artifactId>
             <version>${xstream.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>${opencsv.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
